[project]
name = "learning-pyspark"
version = "0.1.0"
description = ""
authors = [
    {name = "Cyprien Kelma",email = "cyprien.kelma@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "learning_pyspark", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
